--- a/src/pages/ContactPage/Contact.css
+++ b/src/pages/ContactPage/Contact.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Dynalight&family=Lovers+Quarrel&family=Poppins:wght@600&family=Raleway:wght@300;400&display=swap");
 
 .container {
-	background-color: black;
+	background-color: #000000ea;
 }
 
 .tableDiv {
@@ -19,3 +19,4 @@
 	font-weight: 100;
 	text-align: center;
 }
+
