--- a/src/pages/PortifolioPage/Portifolio.css
+++ b/src/pages/PortifolioPage/Portifolio.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Dynalight&family=Lovers+Quarrel&family=Poppins:wght@600&family=Raleway:wght@300;400&display=swap");
 
 .container {
-	background-color: black;
+	background-color: #000000ea;
 }
 
 .tableDiv {
