--- a/src/shared/style/global.css
+++ b/src/shared/style/global.css
@@ -1,7 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Dynalight&family=Lovers+Quarrel&family=Poppins:wght@600&family=Raleway:wght@300;400&display=swap");
 
-body {
-	margin: 0;
+
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 
 .display-4 {
@@ -12,3 +19,6 @@ body {
 	margin: 0;
 	text-align: center;
 }
+
+
+
